--- a/hurdles/style.css
+++ b/hurdles/style.css
@@ -54,7 +54,7 @@ nav button {
 }
 
 .img1 img {
-  width: 400px;
+  width: 500px;
 }
 
 .dbutton {
@@ -62,7 +62,6 @@ nav button {
   align-items: center;
   margin-bottom: 2rem;
 }
-
 .hero-section button,
 .first button {
   background-color: rgb(241, 70, 164);
@@ -78,7 +77,21 @@ nav button {
 .down-section,
 .down-section2,
 .down-section3 {
-  padding: 10px 20px;
+  width: 400px;
+}
+
+.down-section,
+.down-section3 {
+  padding: 20px 0;
+  padding-left: 100px;
+  padding-right: 30px;
+}
+
+
+.down-section2 {
+  padding: 20px 0;
+  padding-right: 100px;
+  padding-left: 30px;
 }
 
 .down-section h3,
@@ -96,7 +109,7 @@ nav button {
   /* padding-right: 50px;
   padding-left: 50px; */
   align-items: center;
-  max-width: 1200px;
+  max-width: 1100px;
   margin-right: auto;
   margin-left: auto;
   border-width: 2px;
@@ -107,10 +120,18 @@ nav button {
 }
 
 .img2 img,
-.img3 img,
 .img4 img {
   width: 350px;
-  padding: 20px 20px;
+  padding: 20px 0px;
+  padding-right: 100px;
+  padding-left: 20px;
+}
+
+.img3 img {
+  width: 350px;
+  padding: 20px 0px;
+  padding-right: 100px;
+  padding-left: 20px;
 }
 
 .first {
@@ -138,7 +159,7 @@ nav button {
   justify-content: center;
   align-items: center;
   margin-top: 10vh;
-  margin-bottom: -5rem;
+  margin-bottom: -3rem;
 }
 
 footer {
@@ -151,10 +172,10 @@ footer {
 }
 
 .fcontainer {
-  /* display: flex; */
-  /* justify-content: space-between; */
+  display: flex;
+  justify-content: space-between;
   margin: auto;
-  max-width: 1350px;
+  max-width: 1100px;
 }
 
 .location,
@@ -230,15 +251,15 @@ footer {
   color: white;
 }
 
+
+/* small screen  */
+
 @media only screen and (max-width: 767px) {
   section {
     margin: 0 0.5rem;
   }
 
-  header {
-        height: 80vh;
-}
-  nav {
+ nav {
     margin: 0.3rem;
   }
 
@@ -274,6 +295,16 @@ footer {
     text-align: center;
   }
 
+  .down-section, .down-section2, .down-section3 {
+    width: 300px;
+}
+
+.down-section, .down-section2, .down-section3 {
+  padding: 20px 0;
+  /* padding-left: 100px; */
+  /* padding-right: 30px; */
+}
+
   p {
     font-size: 0.6rem;
   }
@@ -287,6 +318,8 @@ footer {
 
   .img1 {
     padding-left: 20px;
+    display: flex;
+    justify-content: center;
   }
 
   .img1 img,
@@ -295,6 +328,13 @@ footer {
   .img4 img {
     width: 250px;
   }
+
+  .img2 img, .img4 img {
+    width: 350px;
+    padding: 20px 0px;
+    /* padding-right: 100px; */
+    /* padding-left: 20px; */
+}
 
   .dbutton {
     /* to justify the button with get started to the center */
@@ -354,17 +394,24 @@ footer {
     display: flex;
     justify-content: center;
   }
+  
   .fp p {
     text-align: center;
     padding: 30px 0;
   }
+
+  .fcontainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: auto;
+    /* max-width: 767px; */
+  }
 }
 
-@media only screen and (min-width: 768px) {
-  header {
-    height: 60vh;
-  }
-  section {
+@media only screen and (min-width: 768px){
+
+section {
     margin: 0 1rem;
   }
   nav {
@@ -400,11 +447,11 @@ footer {
   .down-section2 p,
   .down-section3 h3,
   .down-section3 p {
-    text-align: center;
+    text-align: left;
   }
 
   p {
-    font-size: 0.6rem;
+    font-size: 0.8rem;
   }
 
   .hero-section button,
@@ -418,7 +465,6 @@ footer {
     padding-top: 50px;
   }
 
-  .img1 img,
   .img2 img,
   .img3 img {
     width: 300px;
@@ -426,7 +472,7 @@ footer {
 
   .dbutton {
     /* to justify the button with get started to the center */
-    justify-content: center;
+    justify-content: left;
   }
 
   .container2,
@@ -486,14 +532,9 @@ footer {
     text-align: center;
     padding: 30px 0;
   }
-  .fcontainer {
-    /* display: flex; */
-    /* justify-content: space-between; */
-    margin: auto;
-    max-width: 1022px;
-  }
 }
-}
+
+
 @media only screen and (min-width: 1023px) {
   /* Site responsiveness on desktop */
   .hero-section {
@@ -516,10 +557,10 @@ footer {
     padding: 50px 0px 50px 0;
   }
 
-  .fcontainer {
-    display: flex;
-    justify-content: space-between;
-    margin: auto;
-    max-width: 1350px;
-  }
+}
+.fcontainer {
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+}
 }
